<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.photoeditor.About">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.00"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        app:layout_constraintBottom_toTopOf="@+id/welcomeMsg" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/about_title"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/about"
        android:textSize="18sp"
        android:fontFamily="serif"
        android:layout_marginTop="10dp"

        android:textColor="#000000"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:text="@string/myself"
        android:fontFamily="serif"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/email"
        android:fontFamily="serif"
        android:textAlignment="center"/>
</LinearLayout>
