<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <EditText
        android:id="@+id/usernameChange"
        android:layout_marginTop="50dp"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:drawableLeft="@drawable/account"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="gravity"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="180dp"
        />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="gravity"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="180dp" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="Repeat the password"
        android:inputType="textPassword"
        android:textAlignment="gravity"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="180dp" />
    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:fontFamily="serif"
        android:text="@string/change" />

</LinearLayout>