<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.photoeditor.LoginActivity"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        app:theme="@style/AppTheme.Base">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="358dp"
        android:layout_height="131dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_page" />

    <EditText
        android:id="@+id/username"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:drawableLeft="@drawable/account"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="gravity"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="180dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="gravity"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:fontFamily="serif"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="OR"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="Want to register?"
        android:textAlignment="center"
        android:textColor="#000000" />

</LinearLayout>
